bk_ida/gccida/c1/process_init_element
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:6990:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:6995:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:6997:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *range_end; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:6998:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:6999:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7001:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7003:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7004:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7007:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7010:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7014:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7016:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7019:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7035:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7037:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0->replacement_value = value; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7040:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7047:9: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
while ( constructor_stack_0->implicit ) 
        ^~~~~~~~~~~~~~~~~~~
        constructor_stack
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7060:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:7121:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[constructor_depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/process_init_element/src/obj/c-typeck.o] Error 1
